[tool.poetry]
name = "repl_python3_IvoryZealousProfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
replit = "^3.2.4"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
discord = "^1.7.3"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
